--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </section>
 
     <section id="research">
-      <h2>Publications</h2>
+      <h2>Research</h2>
       <ul>
         <li><strong>DVM: A deep learning algorithm for minimizing functionals,</strong> — <em>Theses and Dissertations at
   Montana State University (MSU)</em>, 2022 <a href="https://scholarworks.montana.edu/xmlui/handle/1/16840" target="_blank" rel="noopener noreferrer">link</a> </li><br/>
@@ -148,3 +148,4 @@
   </script>
 </body>
 </html>
+
