--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
       <nav>
         <a href="#about">About</a>
         <a href="#research">Research</a>
+        <a href="#conferences">Conferences</a>
         <a href="#teaching">Teaching</a>
         <a href="#cv">CV</a>
         <a href="#contact">Contact</a>
@@ -101,6 +102,16 @@
         <li><strong>Title of Paper 2</strong> — <em>Preprint</em><br/>
           Brief description of the work in progress or submitted preprint.</li>
   -->
+      </ul>
+    </section>
+
+      <section id="conferences">
+      <h2>Conferences</h2>
+      <ul>
+        <li><strong>ATMCS11</strong> – July 2025<br/>
+           Topics: Algebraic Topology, Methods, Computation, & Science.</li>
+        <li><strong>53rd Barret Lectures</strong> – May 2025<br/>
+          Topics: Recent Development in Geometric Group Theory.</li>
       </ul>
     </section>
 
@@ -148,4 +159,5 @@
   </script>
 </body>
 </html>
+
 
