--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
       <section id="conferences">
       <h2>Conferences</h2>
       <ul>
-        <li><strong>ATMCS11</strong> – July 2025<br/>
+        <li><strong>ATMCS11</strong> – Montana State University July 2025<br/>
            Topics: Algebraic Topology, Methods, Computation, & Science.</li>
-        <li><strong>53rd Barret Lectures</strong> – May 2025<br/>
+        <li><strong>53rd Barret Lectures</strong> – University of Tennessee May 2025<br/>
           Topics: Recent Development in Geometric Group Theory.</li>
       </ul>
     </section>
@@ -159,5 +159,6 @@
   </script>
 </body>
 </html>
+
 
 
