--- a/index.html
+++ b/index.html
@@ -112,6 +112,8 @@
            Topics: Algebraic Topology, Methods, Computation, & Science.</li>
         <li><strong>53rd Barret Lectures</strong> – University of Tennessee - May 2025<br/>
           Topics: Recent Development in Geometric Group Theory.</li>
+        <li><strong>52rd Barret Lectures</strong> – University of Tennessee - May 2024<br/>
+          Topics: Stochastic Analysis and its Application.</li>
       </ul>
     </section>
 
@@ -159,6 +161,7 @@
   </script>
 </body>
 </html>
+
 
 
 
