--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <section id="about">
       <h2>About</h2>
       <p>
-        I am a PhD candidate in mathematics at the University of Tennessee, advised by Dr. Yulan Qing. 
+        I am a PhD candidate in mathematics at the University of Tennessee, advised by <a href="https://web.math.utk.edu/~yqing/" target="_blank">Dr. Yulan Qing</a> 
         My current interests lie in coarse geometry and stochastic processes. My previous research includes
         machine learning, computer vision, Bayesian inference, and experimental physics.
         I'm passionate about both theoretical research and communicating mathematics through teaching.
