--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <section id="research">
       <h2>Research</h2>
       <ul>
-        <li><strong>First-passage percolation, non-positive curvature, and radial maps</strong> — <em>Preprint here: <a href="FPP_is_not_hyperbolic.pdf" target="_blank">FPP_is_not_hyperbolic.pdf</a></em><br/>
+        <li><strong>First-passage percolation, non-positive curvature, and radial maps</strong> — <em>Preprint here: <a href="FPP_is_not_hyperbolic.pdf" target="_blank">link</a></em><br/>
           A study on the preservation, or lack there of, of geometries with non-positive curvature under first-passage percolation.</li>
         <li><strong>DVM: A deep learning algorithm for minimizing functionals,</strong> — <em>Theses and Dissertations at
   Montana State University (MSU)</em>, 2022 <a href="https://scholarworks.montana.edu/xmlui/handle/1/16840" target="_blank" rel="noopener noreferrer">link</a> </li><br/>
@@ -176,6 +176,7 @@
   </script>
 </body>
 </html>
+
 
 
 
