--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
     <section id="research">
       <h2>Research</h2>
       <ul>
-        <li><strong>First-passage percolation, non-positive curvature, and radial maps,</strong> — <em> Preprint, </em> 2025, <a href="FPP_is_not_hyperbolic.pdf" target="_blank">link</a><br/>
+        <li><strong>First-passage percolation, non-positive curvature, and radial maps,</strong> — <em> Preprint </em>, 2025, <a href="FPP_is_not_hyperbolic.pdf" target="_blank">link</a>.<br/>
         Joint work with Sagnik Jana and Yulan Qing. A study on the preservation, or lack there of, of geometries with non-positive curvature under first-passage percolation.</li>
         
-        <li><strong>DVM: A deep learning algorithm for minimizing functionals,</strong> — <em>Theses and Dissertations at Montana State University (MSU)</em>, 2022 <a href="https://scholarworks.montana.edu/xmlui/handle/1/16840" target="_blank" rel="noopener noreferrer">link</a> <br/>
+        <li><strong>DVM: A deep learning algorithm for minimizing functionals,</strong> — <em>Theses and Dissertations at Montana State University (MSU)</em>, 2022, <a href="https://scholarworks.montana.edu/xmlui/handle/1/16840" target="_blank" rel="noopener noreferrer">link</a>.<br/>
         Advised by Dr. Dominique Zosso. A novel deep learning algorithm using concepts in caclulus of varitaions to solve PDE's.</li>
         
-        <li><strong>MNPmApp: An image analysis tool to quantify mononuclear phagocyte distribution in mucosal tissues,</strong> — <em>Cytometry Part A, vol. 101, no. 12, pp. 1012–1026</em>, 2022 <a href="https://onlinelibrary.wiley.com/doi/10.1002/cyto.a.24657" target="_blank" rel="noopener noreferrer">link</a> <br/>
+        <li><strong>MNPmApp: An image analysis tool to quantify mononuclear phagocyte distribution in mucosal tissues,</strong> — <em>Cytometry Part A, vol. 101, no. 12, pp. 1012–1026</em>, 2022, <a href="https://onlinelibrary.wiley.com/doi/10.1002/cyto.a.24657" target="_blank" rel="noopener noreferrer">link</a>.<br/>
         Joint work with Catherine Potts, Julia Schearer, Thomas A. Sebrell, Becky Ayler, Jordan Love, Jennifer Dankoff, Paul R. Harris, Dominique Zosso, and Diane Bimczok. A tool to analyze spatial statistics of dendritic cells in gastric mucosa.</li>  
   
   <!--
@@ -179,6 +179,7 @@
   </script>
 </body>
 </html>
+
 
 
 
