--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
     <section id="about">
       <h2>About</h2>
       <p>
-        I am a PhD candidate in mathematics at the University of Tennessee, advised by <a href="https://web.math.utk.edu/~yqing/" target="_blank">Dr. Yulan Qing</a>. 
+        I am a PhD candidate in mathematics at the University of Tennessee, advised by <a href="https://web.math.utk.edu/~yqing/" target="_blank">Dr. Yulan Qing</a>
+	and <a href="https://web.math.utk.edu/~jrosinsk/" target="_blank">Dr. Jan Rosinski</a>.
         My current interests lie in coarse geometry and stochastic processes. My previous research includes
         machine learning, computer vision, Bayesian inference, and experimental physics.
         I'm passionate about both theoretical research and communicating mathematics through teaching.
@@ -107,7 +108,7 @@
     <section id="research">
       <h2>Research</h2>
       <ul>
-        <li><strong>First-passage percolation, non-positive curvature, and radial maps,</strong> — <em> Preprint </em>, 2025, <a href="FPP_is_not_hyperbolic.pdf" target="_blank">link</a>.<br/>
+        <li><strong>First-passage percolation, non-positive curvature, and radial maps,</strong> — <em> Preprint </em>, 2025, <a href="https://arxiv.org/abs/2512.05720" target="_blank">link</a>.<br/>
         Joint work with Sagnik Jana and Yulan Qing. A study on the preservation, or lack there of, of geometries with non-positive curvature under first-passage percolation.</li>
         
         <li><strong>DVM: A deep learning algorithm for minimizing functionals,</strong> — <em>Theses and Dissertations at Montana State University (MSU)</em>, 2022, <a href="https://scholarworks.montana.edu/xmlui/handle/1/16840" target="_blank" rel="noopener noreferrer">link</a>.<br/>
@@ -179,7 +180,6 @@
   </script>
 </body>
 </html>
-
 
 
 
