--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
       <p>
         I am a PhD candidate in mathematics at the University of Tennessee, advised by <a href="https://web.math.utk.edu/~yqing/" target="_blank">Dr. Yulan Qing</a>
 	and <a href="https://web.math.utk.edu/~jrosinsk/" target="_blank">Dr. Jan Rosinski</a>.
-        My current interests lie in coarse geometry and stochastic processes. My previous research includes
-        machine learning, computer vision, Bayesian inference, and experimental physics.
+        My current interests lie at the intersection of coarse geometry and stochastic processes. In particular, I am interested in percolation and graph limit theory.
+	My previous research includes machine learning, computer vision, Bayesian inference, and experimental physics.
         I'm passionate about both theoretical research and communicating mathematics through teaching.
       </p>
     </section>
