--- a/index.html
+++ b/index.html
@@ -138,10 +138,11 @@
 
     <section id="teaching">
       <h2>Teaching</h2>
+	<p>You can view my semester schedule here: <a href="sp26_schedule.pdf" target="_blank">sp26_schedule.pdf</a></p>
       <ul>
-        <li><strong>M115 Statistical Reasoning </strong> – Fall 2025<br/>
+        <li><strong>M115 Statistical Reasoning </strong> – Spring 2026<br/>
           Role: Instructor for two sections.</li>
-        <li><strong>M125 Basic Calculus</strong> – Spring 2025<br/>
+        <li><strong>M115 Statistical Reasoning </strong> – Fall 2025<br/>
           Role: Instructor for two sections.</li>
       </ul>
     </section>
